# pypj

./: .pre-commit-config.yaml  .python-version  CONTRIBUTING.md  LICENSE  Makefile  README.md  codecov.yml  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  label.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: publish.yml  stale.yml  sync_labels.yml  unittest.yml
pypj/: __init__.py  args.py  const.py  cui.py  environment.py  exception.py  file_path.py  main.py  poetry.py  resource.py  setting.py  settings.jsonc  type_def.py  utils.py  version.py
pypj/resources/: .pre-commit-config.yaml  Makefile  Makefile_precommit  README.md  publish.yml  settings.json  settings.jsonc  unittest.yml
pypj/resources/package/: test_package.py
pypj/task/: __init__.py  githubactions.py  makefile.py  poetry.py  precommit.py  pyproject.py  readme.py  task.py  task_manager.py  vscode.py
test/: test_cui.py  test_environment.py  test_exception.py  test_main.py
tests/: conftest.py  test_args.py  test_cui.py  test_design.md  test_environment.py  test_file_path.py  test_main.py  test_main_exception.py  test_resource.py  test_setting.py  test_usecase.py
tests/task/: test_githubactions.py  test_makefile.py  test_precommit.py  test_pyproject.py  test_readme.py  test_task_manager.py  test_vscode.py
